# docdo-paper

./: .dvcignore  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  LICENSE.md  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: README.md  structure-validation.yml  yaml-validation.yml
artifacts/: README.md
artifacts/data/: README.md
artifacts/data/annotations/: coding-scheme.md  labeling-rules.md
artifacts/data/evidence/supplementary/: S0_data_provenance.md  S10_verified_statistics.md  S8_table_sources.csv  (+17 more)
artifacts/data/public/: README.md
artifacts/data/schemas/: README.md
core/: README.md
core/conceptual-architecture/glossary/: README.md
core/conceptual-architecture/theoretical-foundations/: README.md
core/governance/: claims.md  decision-log.md  editorial-principles.md  terminology-matrix.md
core/governance/evidence/: README.md
core/governance/guidelines/: README.md  git-commit-guidelines.md
core/governance/legal/: README.md  release-compliance.md
core/governance/registry/: README.md  datasets.yaml  source-aliases.yaml  sources.yaml
core/governance/research-log/: README.md  chat-log.md  development-log.md  task-board.md  todo-peer-review.md
core/governance/templates/: cover-letter.template.md  outline.template.md  paper.template.md  rebuttal.template.md
core/governance/venues/: venues.md
core/metadata/: README.md
core/metadata/jsonld/: person.jsonld
documentation/: README.md  data-policy.md  faq.md  getting-started.md  pipelines.md  repository-structure.md
documentation/reports/: critical-analysis.md  paper-qa.md  peer-review-analysis.md  study-list.md  supplementary-study-list.md
operations/: README.md
operations/pipelines/: README.md
operations/src/_archive/: README.md
operations/src/docdo/: __init__.py  analysis.py  cli.py  config.py  dedup.py  fetch.py  io.py  openai_utils.py  screening.py  verify.py
operations/tests/: conftest.py  test_analysis.py  test_cli.py  test_config.py  test_dedup.py  test_fetch.py  test_io.py  test_openai_utils.py  test_screening.py  test_verify.py
operations/tools/cli/: README.md  embed.sh  feature_extract.sh  ingest.sh  normalize.sh  publish.sh  quality-control.sh
scholar/: README.md
scholar/bib/: additional-references.bib  references.bib  reviewed-papers.bib  sources.md
work/: README.md
work/projects/: README.md
work/projects/papers/: README.md
work/references/frameworks/: README.md
work/references/glossaries/: README.md
work/references/instruments/: README.md
(+95 files in other folders)
